objects/Service_PO__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Service_Construction_Requisition__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>SCR_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Accounting_Rejection_Notes__c</fullName>
        <label>Accounting Rejection Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Change_Order_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of the Amount Requested field of all Construction Requisitions that are of type Subcontractor Change Order associated with this Construction Purchase Order.  This field is calculated by the trigger ChangeOrderTotal.</description>
        <label>Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Cost_Code_Cat__c</fullName>
        <label>Cost Code/Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCR_Days_Since_Last_Modified__c</fullName>
        <formula>IF(AND(TEXT( SCR_Status__c ) &lt;&gt; &quot;Closed&quot;, TEXT( SCR_Status__c ) &lt;&gt; &quot;Cancelled&quot;), TODAY() - DATEVALUE(LastModifiedDate), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCR_Delivery_Notes__c</fullName>
        <label>Delivery Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Expected_Cost__c</fullName>
        <label>Expected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Expected_Delivery_Date__c</fullName>
        <label>Vendor Confirmed Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCR_Freight_Company__c</fullName>
        <label>Freight Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Item_Code__c</fullName>
        <label>Item Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Max_Freight_Allowance__c</fullName>
        <label>Max Freight Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Printed__c</fullName>
        <label>Printed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCR_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Service_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCR_Project_Name__c</fullName>
        <label>Service Visit Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Purchaser_Phone__c</fullName>
        <formula>SCR_Requested_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchaser Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCR_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCR_Requisition_Number__c</fullName>
        <label>Service Req Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Retention_Held__c</fullName>
        <description>This field is a pull through from the Retention Held field of the Construction Requisition record of type Subcontractor Requisition associated with this Construction Purchase Order.</description>
        <label>Retention Held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCR_Retention_Percent__c</fullName>
        <description>This field is a pull through from the Retention Percent field of the Construction Requisition record of type Subcontractor PO associated with this Construction Purchase Order.</description>
        <label>Retention Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCR_Sales_Tax__c</fullName>
        <formula>SCR_Tax_Rate__c *( SCR_Quantity__c * SCR_Unit_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Ship_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Ship_To_Contact__c</fullName>
        <label>Ship To Contact</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCR_Shipping__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved by Aaron</fullName>
                </value>
                <value>
                    <fullName>Director Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor Received PO</fullName>
                </value>
                <value>
                    <fullName>Vendor Shipped Material</fullName>
                </value>
                <value>
                    <fullName>Material Received</fullName>
                </value>
                <value>
                    <fullName>Work Complete</fullName>
                </value>
                <value>
                    <fullName>Invoice Received</fullName>
                </value>
                <value>
                    <fullName>Invoice Attached</fullName>
                </value>
                <value>
                    <fullName>Invoice Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCR_Subcontractor_Specialty__c</fullName>
        <formula>TEXT(SCR_Vendor_Account__r.Type)</formula>
        <label>Subcontractor Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Tax_Exemption__c</fullName>
        <label>Tax Exemption Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SCR_Third_Party_Shipping__c</fullName>
        <label>Third Party Shipping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCR_Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCR_Total_Cost_CO_s__c</fullName>
        <formula>SCR_Change_Order_Total__c +  SCR_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost + CO&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Total_Cost_Change__c</fullName>
        <label>Total Cost Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Total_Cost__c</fullName>
        <formula>SCR_Quantity__c * SCR_Unit_Cost__c+ SCR_Shipping__c + SCR_Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Total_Invoiced_To_Date__c</fullName>
        <label>Total Invoiced To Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SCR_Con_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Address1__c</fullName>
        <formula>SCR_Vendor_Account__r.BillingCity &amp; &quot;, &quot; &amp;  SCR_Vendor_Account__r.BillingState &amp; &quot; &quot; &amp; 
   SCR_Vendor_Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Address__c</fullName>
        <formula>SCR_Vendor_Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Fax__c</fullName>
        <formula>SCR_Vendor_Account__r.Fax</formula>
        <label>Vendor Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCR_Vendor_Phone__c</fullName>
        <formula>SCR_Vendor_Account__r.Phone</formula>
        <label>Vendor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Construction_Requisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Construction Requisition</label>
        <referenceTo>Service_Construction_Requisition__c</referenceTo>
        <relationshipLabel>Service Construction Purchase Orders</relationshipLabel>
        <relationshipName>Service_Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Service Construction Purchase Orders</relationshipLabel>
        <relationshipName>Service_Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SCR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Major Component</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Service_Construction_Requisition__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SVC-PO-{00000000}</displayFormat>
        <label>SVC PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Construction Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Anita_Lynne_Mary_only_change_vendor_date</fullName>
        <active>true</active>
        <description>Only Lynne, Mary, and Anita can change the vendor delivery date</description>
        <errorConditionFormula>AND( (ISCHANGED( SCR_Expected_Delivery_Date__c )), $User.LastName &lt;&gt; &quot;Parker&quot;, $User.LastName &lt;&gt; &quot;East&quot;, $User.LastName &lt;&gt; &quot;Orozco&quot; )</errorConditionFormula>
        <errorDisplayField>SCR_Expected_Delivery_Date__c</errorDisplayField>
        <errorMessage>Only Lynne, Mary, or Anita can update the Vendor Confirmed ship date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_Aaron_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.FirstName &lt;&gt; &quot;Aaron&quot;, ISPICKVAL(SCR_Status__c, &quot;Approved by Aaron&quot;))</errorConditionFormula>
        <errorDisplayField>SCR_Status__c</errorDisplayField>
        <errorMessage>Only Aaron Hall can change the Status to Approved by Aaron.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_Force_Rejection_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( SCR_Status__c, &apos;Rejected&apos;),  SCR_Accounting_Rejection_Notes__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>SCR_Accounting_Rejection_Notes__c</errorDisplayField>
        <errorMessage>Please enter Rejection Notes so the PM will know what to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_Product_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() = FALSE, ISPICKVAL(SCR_Status__c , &quot;PM Approved&quot;),  SCR_Cost_Code_Cat__c = &quot;02-1215 M&quot;,  SCR_Product__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>SCR_Product__c</errorDisplayField>
        <errorMessage>Please enter the racking product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_Third_Party_Shipping</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() = FALSE, ISPICKVAL(SCR_Third_Party_Shipping__c , &quot;Yes&quot;), SCR_Freight_Company__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>SCR_Freight_Company__c</errorDisplayField>
        <errorMessage>You must enter a Freight Company when Third Party Shipping equals Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_Vendor_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() = FALSE, ISPICKVAL(SCR_Status__c , &quot;PM Approved&quot;),  SCR_Vendor_Contact__r.Email = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>SCR_Vendor_Contact__c</errorDisplayField>
        <errorMessage>Vendor Contact Email is required. Please go the the Vendor Contact page and enter the email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_Exemption</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() = FALSE, SCR_Tax_Exemption__c &lt;&gt; &apos;Exempt&apos; , SCR_Tax_Exemption__c &lt;&gt; &apos;Non-Exempt&apos; , SCR_Tax_Exemption__c &lt;&gt; &apos;Not Entered&apos;, SCR_Tax_Exemption__c &lt;&gt; &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>SCR_Tax_Exemption__c</errorDisplayField>
        <errorMessage>You may only enter Exempt or Non-Exempt as the Tax Exemption Status.</errorMessage>
    </validationRules>
</CustomObject>